objects/ssot__PatientHealthCondition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AbatementEndDateTime__c</fullName>
        <label>Abatement End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AbatementStartDateTime__c</fullName>
        <label>Abatement Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssertionSourceId__c</fullName>
        <label>Assertion Source</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssertionSourceObject__c</fullName>
        <label>Assertion Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BodySiteId__c</fullName>
        <label>Body Site</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionCategoryCode__c</fullName>
        <label>Patient Health Conditon Detail</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionCodeId__c</fullName>
        <label>Health Condition Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionDefinitionId__c</fullName>
        <label>Health Condition Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionDiagnosticStatus__c</fullName>
        <label>Health Condition Diagnostic Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionSeverity__c</fullName>
        <label>Health Condition Severity</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionStageId__c</fullName>
        <label>Health Condition Stage</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionStatus__c</fullName>
        <label>Health Conditon Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthConditionType__c</fullName>
        <label>Health Condition Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Health Condition Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OnsetEndDateTime__c</fullName>
        <label>Onset End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OnsetStartDateTime__c</fullName>
        <label>Onset Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalRecordCreationDateTime__c</fullName>
        <label>Original Record Creation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordCreatorObject__c</fullName>
        <label>Record Creator Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordCreatorReferenceId__c</fullName>
        <label>Record Creator Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725641382_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthCondition_HealthConditi_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientHealthCondition_HealthConditi_rel</relationshipLabel>
        <relationshipName>rel_1716725641382_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725652195_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthCondition_RecordCreator_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>PatientHealthCondition_RecordCreator_rel</relationshipLabel>
        <relationshipName>rel_1716725652195_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725654885_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthCondition_BodySiteId_ma_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientHealthCondition_BodySiteId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716725654885_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>